[FIX] web: fix dropdown visibility for 'Apps'

--- a/addons/web/static/src/legacy/scss/kanban_view.scss
+++ b/addons/web/static/src/legacy/scss/kanban_view.scss
@@ -421,6 +421,10 @@
         }
     }
 
+    .o_kanban_record.oe_module_vignette .dropdown-toggle {
+        visibility: visible;
+    }
+
     // Kanban Grouped Layout
     &.o_kanban_grouped {
         min-height: 100%;
